tests/ui/macros/unreachable-arg.edition_2021.stderr
error: format argument must be a string literal
  --> $DIR/unreachable-arg.rs:14:18
   |
LL |     unreachable!(a);
   |                  ^
   |
help: you might be missing a string literal to format with
   |
LL |     unreachable!("{}", a);
   |                  +++++

error: aborting due to 1 previous error

